# buzzwords_cv

./: .gitignore  Makefile  README.md  buzzwords.py  cv.py  cv.sh  explore_buzzwords_230630.py  generate_cover_letter.py  generate_cv.py  pyproject.toml  test_buzzwords.py
archive/: cv.py  cv.sh
buzzwordscv/: cover_letter.py  cv.py
buzzwordscv/data/: experience.json
buzzz/: buzzwords.py  cover_letter.py  cv.py
buzzz/data/: experience.json
tests/: __init__.py  test_buzzwords.py  test_cv.py
